hphp/hack/test/typecheck/abstract_typeconsts/redeclare_no_default2.php.legacy_decl.exp
File "redeclare_no_default2.php", line 13, characters 13-13:
This class was declared as final. It must provide an implementation for the abstract type constant 'T' (Typing[4047])
File "redeclare_no_default2.php", line 8, characters 23-23:
Declaration is here
